# hellocompute

./: LICENSE
hello_add_cl/: CMakeLists.txt
hello_add_cl/src/: cl_buffer.c  cl_buffer.h  cl_context.c  cl_context.h  cl_device.c  cl_device.h  cl_error.c  cl_error.h  cl_kernel.c  cl_kernel.h  cl_platform.c  cl_platform.h  cl_program.c  cl_program.h  cl_queue.c  cl_queue.h  hello_cl.h  main.c
hello_add_cpp/: CMakeLists.txt
hello_add_cpp/src/: main.cu  main_cpu.cpp
hello_add_metal/: CMakeLists.txt
hello_add_metal/shaders/: add.metal
hello_add_metal/src/: main.c  main.m  renderer.h  renderer.m  setup_metal.h  setup_metal.m
hello_add_py/: main.py
hello_add_rs/: Cargo.toml
hello_add_rs/src/: main.rs
hello_add_vk/: CMakeLists.txt
hello_add_vk/shaders/: add.comp
hello_add_vk/src/: main.c  vk_debug.c  vk_debug.h  vk_device.c  vk_device.h  vk_instance.c  vk_instance.h  vk_queue.c  vk_queue.h
